--- a/resume/index.html
+++ b/resume/index.html
@@ -55,7 +55,8 @@
 <li>
 <p>Visionite, 2021 - present</p>
 <ul>
-<li>DevOps Engineer @ Länsförsäkringar, 2023 - present
+<li>Software Developer @ Västtrafik, 2025 - present</li>
+<li>DevOps Engineer @ Länsförsäkringar, 2023 - 2025
 <ul>
 <li>Elevating the capabilities of developer teams to deliver value</li>
 <li>Migrating web applications from on-prem servers to the cloud</li>
@@ -99,7 +100,7 @@
 </ul>
 <h2 id="technologies-and-languages">Technologies and Languages</h2>
 <ul>
-<li><strong>Technologies</strong>: Azure | Azure DevOps | OpenShift | Docker | Kubernetes | Nginx | Git</li>
+<li><strong>Technologies</strong>: Azure | Azure DevOps | GitHub Enterprise | OpenShift | Docker | Kubernetes | Nginx | Git</li>
 <li><strong>Languages</strong>:  C#/.NET | Python | Go | Bash | JavaScript | SQL | Bicep</li>
 </ul>
 <h2 id="links">Links</h2>
